Fixes native build